--- a/index.html
+++ b/index.html
@@ -39,6 +39,13 @@
 	  opacity: 0.75;
 	}
 
+	#toggle {
+		z-index: 99;
+		position:absolute;
+		top:20px;
+		right:10px;
+	}
+
 	#loader{
 		  position: fixed;
 		  top: 50%;
@@ -83,9 +90,10 @@
 
 </div>
 <div id='header11'> 
-	<h1 style=" margin-top: 1px; margin-bottom: 1px">Kirchen in der Stadt Zürich</h1> <hr noshade> <h3 style=" margin-top: 1px; margin-bottom: 1px">Anzahl verzeichnete Kirchen: 173</h3>
+	<h1 style=" margin-top: 1px; margin-bottom: 1px"> Reformierte Kirchen der Stadt Zürich</h1> <hr noshade> <h3 style=" margin-top: 1px; margin-bottom: 1px">Anzahl verzeichnete Kirchen: 173</h3>
 </div>
 <div id='loader'> </div>
+<button id='toggle'> Switch 2D/3D</button>
 
 <script src="js/script.js"> </script>
 
