--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
 <body>
 <div id='map'>
  <div id="attribution" class="mapboxgl-ctrl mapboxgl-ctrl-attrib mapboxgl-ctrl-bottom-right" style="position: fixed; bottom: 0; right: 30px bottom:10px;">
-        <a href="*">Built by <a href="http://www.melanieimfeld.com"> Melanie </a> </a>
+        <a href="http://www.melanieimfeld.com">Built with &#x2661; by Melanie </a> </a>
     </div>
 
 
